opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/findlib_top"
bug-reports: "https://github.com/janestreet/findlib_top/issues"
dev-repo: "https://github.com/janestreet/findlib_top.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "findlib_top" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Exposes findlib_top.cma without the need for using predicates

This packages only exposes findlib_top.cma as the library findlib_top,
so that we can use it without fiddling with predicates.
"
